# jovian_practice_web

./: LICENSE  README.md  app.py  pyproject.toml
templates/: footer.html  home.html  jobitem.html  nav.html
